--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desenvolvedor Cadastra</title>
+  <title>Desenvolvedor Cadastra | Ryan Gripp da Silva</title>
   <link rel="stylesheet" href="main.css" />
 </head>
 
@@ -15,7 +15,7 @@
       <img src="./img/logo-cadastra.png" class="logo-cadastra" />
     </div>
     <div id="shopping-cart">
-      <img src="./img/icon-carrinho.png" />
+      <div id="cart-quantity">0</div>
     </div>
   </header>
   <div id="modal-cart">
