--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,7 @@
   </main>
   <footer>
     <h3>CADASTRA: Implantação de E-commerce VTEX</h3>
+    <h3>Desenvolvido por: <a href="https://ryangripp.github.io/RyanGripp/" target="_blank">Ryan Gripp</a></h3>
   </footer>
 </body>
 
